--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
           echo "$HOME/.moon/bin" >> $GITHUB_PATH
 
       - name: Verify MoonBit
-        run: moon --version
+        run: moon --help
 
       - name: Build
         run: moon build
